--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -22,5 +22,9 @@
             app:destination="@id/firstScreen"
             app:enterAnim="@android:anim/slide_in_left"
             app:exitAnim="@android:anim/slide_out_right" />
+        <argument
+            android:name="stringLine"
+            app:argType="string"
+            android:defaultValue="Second Screen" />
     </fragment>
 </navigation>
